--- a/VentUI.ui
+++ b/VentUI.ui
@@ -1981,7 +1981,7 @@
               <property name="geometry">
                <rect>
                 <x>0</x>
-                <y>10</y>
+                <y>140</y>
                 <width>141</width>
                 <height>41</height>
                </rect>
@@ -2043,6 +2043,32 @@
               </property>
               <property name="text">
                <string>I/O</string>
+              </property>
+             </widget>
+             <widget class="QPushButton" name="btnHist">
+              <property name="geometry">
+               <rect>
+                <x>0</x>
+                <y>0</y>
+                <width>31</width>
+                <height>31</height>
+               </rect>
+              </property>
+              <property name="text">
+               <string>H</string>
+              </property>
+             </widget>
+             <widget class="QPushButton" name="btnHistFilt">
+              <property name="geometry">
+               <rect>
+                <x>30</x>
+                <y>0</y>
+                <width>31</width>
+                <height>31</height>
+               </rect>
+              </property>
+              <property name="text">
+               <string>HF</string>
               </property>
              </widget>
             </widget>
