--- a/VentUI.ui
+++ b/VentUI.ui
@@ -522,6 +522,9 @@
        <layout class="QVBoxLayout" name="verticalLayout_2">
         <item>
          <layout class="QHBoxLayout" name="horizontalLayoutSettings">
+          <property name="spacing">
+           <number>0</number>
+          </property>
           <item>
            <widget class="QStackedWidget" name="controlStack">
             <property name="minimumSize">
@@ -1098,188 +1101,10 @@
              <zorder>vtlcd</zorder>
             </widget>
             <widget class="QWidget" name="page_2">
-             <widget class="QDial" name="peepdial">
-              <property name="geometry">
-               <rect>
-                <x>280</x>
-                <y>20</y>
-                <width>100</width>
-                <height>100</height>
-               </rect>
-              </property>
-              <property name="minimumSize">
-               <size>
-                <width>100</width>
-                <height>100</height>
-               </size>
-              </property>
-              <property name="minimum">
-               <number>0</number>
-              </property>
-              <property name="maximum">
-               <number>25</number>
-              </property>
-             </widget>
-             <widget class="QLabel" name="label_8">
-              <property name="geometry">
-               <rect>
-                <x>278</x>
-                <y>8</y>
-                <width>101</width>
-                <height>21</height>
-               </rect>
-              </property>
-              <property name="layoutDirection">
-               <enum>Qt::LeftToRight</enum>
-              </property>
-              <property name="frameShape">
-               <enum>QFrame::NoFrame</enum>
-              </property>
-              <property name="frameShadow">
-               <enum>QFrame::Plain</enum>
-              </property>
-              <property name="lineWidth">
-               <number>8</number>
-              </property>
-              <property name="midLineWidth">
-               <number>8</number>
-              </property>
-              <property name="text">
-               <string>PEEP LEVEL</string>
-              </property>
-              <property name="textFormat">
-               <enum>Qt::AutoText</enum>
-              </property>
-              <property name="scaledContents">
-               <bool>false</bool>
-              </property>
-              <property name="alignment">
-               <set>Qt::AlignCenter</set>
-              </property>
-             </widget>
-             <widget class="QLCDNumber" name="peeplcd">
-              <property name="geometry">
-               <rect>
-                <x>300</x>
-                <y>50</y>
-                <width>66</width>
-                <height>40</height>
-               </rect>
-              </property>
-              <property name="minimumSize">
-               <size>
-                <width>0</width>
-                <height>40</height>
-               </size>
-              </property>
-              <property name="font">
-               <font>
-                <pointsize>12</pointsize>
-                <weight>50</weight>
-                <bold>false</bold>
-               </font>
-              </property>
-              <property name="styleSheet">
-               <string notr="true">color:black</string>
-              </property>
-              <property name="frameShape">
-               <enum>QFrame::NoFrame</enum>
-              </property>
-              <property name="frameShadow">
-               <enum>QFrame::Plain</enum>
-              </property>
-              <property name="digitCount">
-               <number>3</number>
-              </property>
-              <property name="segmentStyle">
-               <enum>QLCDNumber::Flat</enum>
-              </property>
-              <property name="value" stdset="0">
-               <double>0.000000000000000</double>
-              </property>
-              <property name="intValue" stdset="0">
-               <number>0</number>
-              </property>
-             </widget>
-             <widget class="QDial" name="lowpdial">
-              <property name="geometry">
-               <rect>
-                <x>150</x>
-                <y>20</y>
-                <width>100</width>
-                <height>100</height>
-               </rect>
-              </property>
-              <property name="maximum">
-               <number>25</number>
-              </property>
-              <property name="value">
-               <number>5</number>
-              </property>
-             </widget>
-             <widget class="QLCDNumber" name="lowplcd">
-              <property name="geometry">
-               <rect>
-                <x>170</x>
-                <y>50</y>
-                <width>64</width>
-                <height>40</height>
-               </rect>
-              </property>
-              <property name="styleSheet">
-               <string notr="true">color:black</string>
-              </property>
-              <property name="frameShape">
-               <enum>QFrame::NoFrame</enum>
-              </property>
-              <property name="digitCount">
-               <number>3</number>
-              </property>
-              <property name="segmentStyle">
-               <enum>QLCDNumber::Flat</enum>
-              </property>
-             </widget>
-             <widget class="QLabel" name="label_10">
-              <property name="geometry">
-               <rect>
-                <x>140</x>
-                <y>8</y>
-                <width>121</width>
-                <height>21</height>
-               </rect>
-              </property>
-              <property name="layoutDirection">
-               <enum>Qt::LeftToRight</enum>
-              </property>
-              <property name="frameShape">
-               <enum>QFrame::NoFrame</enum>
-              </property>
-              <property name="frameShadow">
-               <enum>QFrame::Plain</enum>
-              </property>
-              <property name="lineWidth">
-               <number>8</number>
-              </property>
-              <property name="midLineWidth">
-               <number>8</number>
-              </property>
-              <property name="text">
-               <string>LOW PRESSURE</string>
-              </property>
-              <property name="textFormat">
-               <enum>Qt::AutoText</enum>
-              </property>
-              <property name="scaledContents">
-               <bool>false</bool>
-              </property>
-              <property name="alignment">
-               <set>Qt::AlignCenter</set>
-              </property>
-             </widget>
              <widget class="QLabel" name="label_11">
               <property name="geometry">
                <rect>
-                <x>404</x>
+                <x>264</x>
                 <y>8</y>
                 <width>111</width>
                 <height>21</height>
@@ -1316,7 +1141,7 @@
              <widget class="QDial" name="himinitdial">
               <property name="geometry">
                <rect>
-                <x>410</x>
+                <x>270</x>
                 <y>20</y>
                 <width>100</width>
                 <height>100</height>
@@ -1338,7 +1163,7 @@
              <widget class="QLCDNumber" name="himinitlcd">
               <property name="geometry">
                <rect>
-                <x>430</x>
+                <x>290</x>
                 <y>50</y>
                 <width>66</width>
                 <height>40</height>
@@ -1379,7 +1204,7 @@
              <widget class="QDial" name="lowminitdial">
               <property name="geometry">
                <rect>
-                <x>540</x>
+                <x>380</x>
                 <y>20</y>
                 <width>100</width>
                 <height>100</height>
@@ -1401,7 +1226,7 @@
              <widget class="QLabel" name="label_12">
               <property name="geometry">
                <rect>
-                <x>534</x>
+                <x>374</x>
                 <y>8</y>
                 <width>111</width>
                 <height>21</height>
@@ -1438,7 +1263,7 @@
              <widget class="QLCDNumber" name="lowminitlcd">
               <property name="geometry">
                <rect>
-                <x>560</x>
+                <x>400</x>
                 <y>50</y>
                 <width>66</width>
                 <height>40</height>
@@ -1476,6 +1301,12 @@
                <double>5.000000000000000</double>
               </property>
              </widget>
+             <zorder>lowminitdial</zorder>
+             <zorder>label_11</zorder>
+             <zorder>himinitdial</zorder>
+             <zorder>himinitlcd</zorder>
+             <zorder>label_12</zorder>
+             <zorder>lowminitlcd</zorder>
             </widget>
             <widget class="QWidget" name="page_3">
              <widget class="QLCDNumber" name="ilcd_bp">
@@ -2072,20 +1903,199 @@
               </property>
              </widget>
             </widget>
-            <widget class="QWidget" name="page_13"/>
+            <widget class="QWidget" name="page_13">
+             <widget class="QLCDNumber" name="peeplcd">
+              <property name="geometry">
+               <rect>
+                <x>112</x>
+                <y>222</y>
+                <width>66</width>
+                <height>40</height>
+               </rect>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>0</width>
+                <height>40</height>
+               </size>
+              </property>
+              <property name="font">
+               <font>
+                <pointsize>12</pointsize>
+                <weight>50</weight>
+                <bold>false</bold>
+               </font>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">color:black</string>
+              </property>
+              <property name="frameShape">
+               <enum>QFrame::NoFrame</enum>
+              </property>
+              <property name="frameShadow">
+               <enum>QFrame::Plain</enum>
+              </property>
+              <property name="digitCount">
+               <number>3</number>
+              </property>
+              <property name="segmentStyle">
+               <enum>QLCDNumber::Flat</enum>
+              </property>
+              <property name="value" stdset="0">
+               <double>0.000000000000000</double>
+              </property>
+              <property name="intValue" stdset="0">
+               <number>0</number>
+              </property>
+             </widget>
+             <widget class="QLCDNumber" name="lowplcd">
+              <property name="geometry">
+               <rect>
+                <x>-18</x>
+                <y>222</y>
+                <width>64</width>
+                <height>40</height>
+               </rect>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">color:black</string>
+              </property>
+              <property name="frameShape">
+               <enum>QFrame::NoFrame</enum>
+              </property>
+              <property name="digitCount">
+               <number>3</number>
+              </property>
+              <property name="segmentStyle">
+               <enum>QLCDNumber::Flat</enum>
+              </property>
+             </widget>
+             <widget class="QDial" name="lowpdial">
+              <property name="geometry">
+               <rect>
+                <x>-38</x>
+                <y>192</y>
+                <width>100</width>
+                <height>100</height>
+               </rect>
+              </property>
+              <property name="maximum">
+               <number>25</number>
+              </property>
+              <property name="value">
+               <number>5</number>
+              </property>
+             </widget>
+             <widget class="QLabel" name="label_10">
+              <property name="geometry">
+               <rect>
+                <x>-48</x>
+                <y>180</y>
+                <width>121</width>
+                <height>21</height>
+               </rect>
+              </property>
+              <property name="layoutDirection">
+               <enum>Qt::LeftToRight</enum>
+              </property>
+              <property name="frameShape">
+               <enum>QFrame::NoFrame</enum>
+              </property>
+              <property name="frameShadow">
+               <enum>QFrame::Plain</enum>
+              </property>
+              <property name="lineWidth">
+               <number>8</number>
+              </property>
+              <property name="midLineWidth">
+               <number>8</number>
+              </property>
+              <property name="text">
+               <string>LOW PRESSURE</string>
+              </property>
+              <property name="textFormat">
+               <enum>Qt::AutoText</enum>
+              </property>
+              <property name="scaledContents">
+               <bool>false</bool>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignCenter</set>
+              </property>
+             </widget>
+             <widget class="QDial" name="peepdial">
+              <property name="geometry">
+               <rect>
+                <x>92</x>
+                <y>192</y>
+                <width>100</width>
+                <height>100</height>
+               </rect>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>100</width>
+                <height>100</height>
+               </size>
+              </property>
+              <property name="minimum">
+               <number>0</number>
+              </property>
+              <property name="maximum">
+               <number>25</number>
+              </property>
+             </widget>
+             <widget class="QLabel" name="label_8">
+              <property name="geometry">
+               <rect>
+                <x>90</x>
+                <y>180</y>
+                <width>101</width>
+                <height>21</height>
+               </rect>
+              </property>
+              <property name="layoutDirection">
+               <enum>Qt::LeftToRight</enum>
+              </property>
+              <property name="frameShape">
+               <enum>QFrame::NoFrame</enum>
+              </property>
+              <property name="frameShadow">
+               <enum>QFrame::Plain</enum>
+              </property>
+              <property name="lineWidth">
+               <number>8</number>
+              </property>
+              <property name="midLineWidth">
+               <number>8</number>
+              </property>
+              <property name="text">
+               <string>PEEP LEVEL</string>
+              </property>
+              <property name="textFormat">
+               <enum>Qt::AutoText</enum>
+              </property>
+              <property name="scaledContents">
+               <bool>false</bool>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignCenter</set>
+              </property>
+             </widget>
+            </widget>
            </widget>
           </item>
           <item>
            <widget class="QStackedWidget" name="infoStack">
             <property name="minimumSize">
              <size>
-              <width>330</width>
+              <width>600</width>
               <height>120</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
-              <width>1000</width>
+              <width>880</width>
               <height>16777215</height>
              </size>
             </property>
@@ -2644,13 +2654,6 @@ background-color: rgb(40, 40, 25);</string>
             <widget class="QWidget" name="page_11"/>
            </widget>
           </item>
-          <item>
-           <layout class="QVBoxLayout" name="verticalLayout_6">
-            <property name="leftMargin">
-             <number>0</number>
-            </property>
-           </layout>
-          </item>
          </layout>
         </item>
         <item>
@@ -2697,8 +2700,6 @@ background-color: rgb(40, 40, 25);</string>
   <tabstop>iedial</tabstop>
   <tabstop>rrdial</tabstop>
   <tabstop>connect</tabstop>
-  <tabstop>peepdial</tabstop>
-  <tabstop>lowpdial</tabstop>
   <tabstop>himinitdial</tabstop>
   <tabstop>lowminitdial</tabstop>
   <tabstop>t_acc</tabstop>
